# Task3_triangle

./: CMakeLists.txt  main.cpp
lib/: Triangle.cpp  Triangle.h
tests/: main_tests.cpp  triangle_tests.cpp
